Ajuste de Estilos

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,15 @@
 <div class="app-body">
-  <div class="app-item">
+  <div>
+    <mat-form-field>
+      <input matInput placeholder="Usuário" name="">
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field>
+      <input matInput placeholder="Senha">
+    </mat-form-field>
+  </div>
+  <div>
     <button mat-raised-button routerLink="main" color="accent">Dale</button>
   </div>
 
