Adição do localStorage Adição do Header do Menu

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,6 @@
     </mat-form-field>
   </div>
   <div>
-    <button mat-raised-button routerLink="main" color="accent">Dale</button>
+    <button mat-raised-button (click)="onLogin()" color="accent">Dale</button>
   </div>
-
 </div>
