--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,4 @@
-<p>main works!</p>
+<app-custom-header></app-custom-header>
+<p>main {{nome}} works!</p>
 <button mat-raised-button routerLink="" color="warn">Voltar</button>
 <button mat-raised-button routerLink="../cadastro" color="warn">Cadastro</button>
