--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -5,3 +5,10 @@
   flex-direction: column;
   height: 100vh;
 }
+
+button{
+  width: 17vw !important;
+  margin-top: 20px;
+  font-size: 1.2em;
+  font-stretch: expanded;
+}
