Criação da Classe de Requisições

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,8 +7,15 @@
 }
 
 button{
-  width: 17vw !important;
+
   margin-top: 20px;
+  padding-right: 3em;
+  padding-left: 3em;
   font-size: 1.2em;
   font-stretch: expanded;
+}
+
+#responseMessage{
+  margin-top: 20px;
+  font-style: italic;
 }
