--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
 <app-custom-header></app-custom-header>
-<p>main {{nome}} works!</p>
+<p>main {{loggedUser.name}} works!</p>
 <button mat-raised-button routerLink="" color="warn">Voltar</button>
 <button mat-raised-button routerLink="../cadastro" color="warn">Cadastro</button>
