--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,16 +3,29 @@
     <h1>Bem-vindo ao Systema</h1>
   </div>
   <div>
-    <mat-form-field>
-      <input matInput placeholder="Usuário" (input)="inputUsername = $event.target.value" [value]="inputUsername">
+    <mat-form-field appearance="outline">
+      <mat-label>Usuário</mat-label>
+        <input matInput [(ngModel)]="inputUsername" class="form-control" id="user" name="user" placeholder="Usuário" required #user="ngModel" >
     </mat-form-field>
+    <div *ngIf="user.invalid &&(user.dirty)"
+         class="alert alert-danger">
+      <div *ngIf="user.errors.required">
+      </div>
+    </div>
   </div>
   <div>
-    <mat-form-field>
-      <input matInput placeholder="Senha" (input)="inputPassword = $event.target.value" [value]="inputPassword">
+    <mat-form-field appearance="outline">
+      <mat-label>Senha</mat-label>
+      <input matInput [(ngModel)]="inputPassword" id="password" name="password"  required #password="ngModel">
     </mat-form-field>
+
+    <div *ngIf="password.invalid && (password.dirty)"
+         class="alert alert-danger">
+      <div *ngIf="password.errors.required">
+      </div>
+    </div>
   </div>
   <div id="divButton">
-    <button mat-raised-button (click)="onLogin()" color="accent">Entrar</button>
+    <button name="submitButton" mat-raised-button (click)="onLogin()" color="accent" ngDefaultControl>Entrar</button>
   </div>
 </div>
