--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,6 +26,6 @@
     </div>
   </div>
   <div id="divButton">
-    <button name="submitButton" mat-raised-button (click)="onLogin()" color="accent" ngDefaultControl>Entrar</button>
+    <button name="submitButton" mat-raised-button (click)="onLogin()" color="primary" ngDefaultControl>Entrar</button>
   </div>
 </div>
