Alteração no favicon Início da Alteração dos cards de menu (props)

--- a/src/app/components/main-menu-card/main-menu-card.component.html
+++ b/src/app/components/main-menu-card/main-menu-card.component.html
@@ -1,9 +1,11 @@
+<a href="#" (click)="testCard()">
 <mat-card>
   <mat-card-header>
-    teste teste
+    {{title}}
   </mat-card-header>
-  <img alt="icon" src="../../assets/profile.svg">
+  <img alt="icon" src="../../assets/{{img}}.svg">
   <mat-card-content>
-    teste
+    {{content}}
   </mat-card-content>
 </mat-card>
+</a>
