alterações tela de login e menu

--- a/src/app/components/main-menu-card/main-menu-card.component.html
+++ b/src/app/components/main-menu-card/main-menu-card.component.html
@@ -3,9 +3,9 @@
   <mat-card-header>
     {{title}}
   </mat-card-header>
-  <img alt="icon" src="../../assets/{{img}}.svg">
+  <img alt="icon" src="../../assets/{{imagem}}.svg">
   <mat-card-content>
-    {{content}}
+    <h1>{{content}}</h1>
   </mat-card-content>
 </mat-card>
 </a>
