--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,5 +27,6 @@
   </div>
   <div id="divButton">
     <button name="submitButton" mat-raised-button (click)="onLogin()" color="primary" ngDefaultControl>Entrar</button>
+    <mat-spinner *ngIf="isLogging" diameter="40" strokeWidth="15"></mat-spinner>
   </div>
 </div>
