--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,6 @@
 <app-custom-header></app-custom-header>
 <div class="main-body">
-<app-main-menu-card *ngFor="let item of menuList" [title]="item.title" [imagem]="item.imagem" [content]="item.content"></app-main-menu-card>
+<!--<app-main-menu-card *ngFor="let item of menuList" [title]="item.title" [imagem]="item.imagem" [content]="item.content"></app-main-menu-card>-->
 <p>main {{loggedUser.name}} works!</p>
-<button mat-raised-button (click)="goBack()" color="warn">Voltar</button>
-<button mat-raised-button routerLink="../cadastro" color="warn">Cadastro</button>
+
 </div>
