Tela de Cadastro de Usuário

--- a/src/app/components/custom-header/custom-header.component.html
+++ b/src/app/components/custom-header/custom-header.component.html
@@ -9,5 +9,5 @@
 </mat-menu>
 
 <mat-menu #subMenu="matMenu">
-  <button mat-menu-item routerLink="../cadastro">Usuário</button>
+  <button mat-menu-item routerLink="../cadastro/usuario">Usuário</button>
 </mat-menu>
