--- a/src/app/cadastro/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/cadastro/cadastro-usuario/cadastro-usuario.component.html
@@ -1,3 +1,10 @@
 <app-custom-header></app-custom-header>
-<table mat-table [dataSource]="">
+<table mat-table [dataSource]="userList">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> Código </th>
+    <td mat-cell *matCellDef="let element">{{element.id}}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
