--- a/src/app/cadastro/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/cadastro/cadastro-usuario/cadastro-usuario.component.html
@@ -1,10 +1,36 @@
 <app-custom-header></app-custom-header>
-<table mat-table [dataSource]="userList">
+<mat-table class="mat-elevation-z0" [dataSource]="currentUserList">
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> Código </th>
-    <td mat-cell *matCellDef="let element">{{element.id}}</td>
+    <mat-header-cell *matHeaderCellDef> Código </mat-header-cell>
+    <mat-cell *matCellDef="let element">{{element.id}}</mat-cell>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="columns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+  <ng-container matColumnDef="name">
+    <mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
+    <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="login">
+    <mat-header-cell *matHeaderCellDef> Nome de Usuário </mat-header-cell>
+    <mat-cell *matCellDef="let element">{{element.login}}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="type">
+    <mat-header-cell *matHeaderCellDef> Tipo de Acesso </mat-header-cell>
+    <mat-cell *matCellDef="let element">{{ element.type == 'BASIC' ? 'BÁSICO' : 'ADMINISTRADOR'}}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="action">
+    <mat-header-cell *matHeaderCellDef></mat-header-cell>
+    <mat-cell *matCellDef="let element">  </mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="columns" ></mat-header-row>
+  <mat-row class="row-item" (click)="goToDetail(row.id)" *matRowDef="let row; columns: columns;"></mat-row>
+</mat-table>
+<mat-paginator [length]="listSize"
+               [pageSize]="10"
+               [pageSizeOptions]="[5, 10, 25, 50]"
+                (page)="updateList($event)">
+</mat-paginator>
+
