--- a/src/app/cadastro/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/cadastro/cadastro-usuario/cadastro-usuario.component.html
@@ -1,4 +1,7 @@
 <app-custom-header></app-custom-header>
+<mat-toolbar>
+  <p>Usuários</p>
+</mat-toolbar>
 <mat-table class="mat-elevation-z0" [dataSource]="currentUserList">
   <ng-container matColumnDef="id">
     <mat-header-cell *matHeaderCellDef> Código </mat-header-cell>
