--- a/src/app/cadastro/cadastro-usuario/cadastro-usuario-detalhe/cadastro-usuario-detalhe.component.scss
+++ b/src/app/cadastro/cadastro-usuario/cadastro-usuario-detalhe/cadastro-usuario-detalhe.component.scss
@@ -9,8 +9,8 @@ mat-expansion-panel-header{
   font-size: 23px;
   height: 2em;
 }
-mat-tab{
-  color: $secondary;
+.labels{
+  color: $secondary !important;
 }
 
 .codigo{
