--- a/src/app/cadastro/cadastro-usuario/cadastro-usuario-detalhe/cadastro-usuario-detalhe.component.scss
+++ b/src/app/cadastro/cadastro-usuario/cadastro-usuario-detalhe/cadastro-usuario-detalhe.component.scss
@@ -21,3 +21,11 @@ mat-expansion-panel-header{
   flex: 1 1 auto;
 }
 
+.cadastro-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+
